tests/uninitialized_instance_property/uninitialized_instance_property.exp
Error ------------------------------------------------------------------------------------------------------ test.js:6:3

Class property not definitively initialized in the constructor. Can you add an assignment to the property declaration?
(`uninitialized-instance-property`)

   6|   p: number; // PropertyNotDefinitivelyInitialized
        ^


Error ----------------------------------------------------------------------------------------------------- test.js:10:3

Class property not definitively initialized in the constructor. Can you add an assignment to the property declaration?
(`uninitialized-instance-property`)

   10|   p1: number; // PropertyNotDefinitivelyInitialized
         ^^


Error ----------------------------------------------------------------------------------------------------- test.js:11:3

Class property not definitively initialized in the constructor. Can you add an assignment to the property declaration?
(`uninitialized-instance-property`)

   11|   p2: number; // PropertyNotDefinitivelyInitialized
         ^^


Error ----------------------------------------------------------------------------------------------------- test.js:15:3

Class property not definitively initialized in the constructor. Can you add an assignment to the property declaration?
(`uninitialized-instance-property`)

   15|   #priv; // PropertyNotDefinitivelyInitialized
         ^^^^^



Found 4 errors
